@@ -1,6 +1,6 @@
 {
   "name": "simp-fips",
-  "version": "0.4.4",
+  "version": "0.4.5",
   "author": "SIMP Team",
   "summary": "A SIMP module for managing FIPS",
   "license": "Apache-2.0",
@@ -14,7 +14,7 @@
   "dependencies": [
     {
       "name": "simp/simplib",
-      "version_requirement": ">= 3.3.0 < 5.0.0"
+      "version_requirement": ">= 4.7.0 < 5.0.0"
     },
     {
       "name": "puppetlabs/stdlib",
